# PF-Hashell-tasks

BasicHaskell/thomas/: basic.hs  thomas.hs  thomas2.hs
FoldTrees/: haskell.hs
IO/: case.hs  copyIo.hs  findTheA.hs  terminalIo.hs
IO/IO - cópia/: case2.hs  copyIO2.hs  copyIo.hs  t1.txt
IO/IO - cópia/W1/: case.hs  findTheA.hs  terminalIo.hs
IO/IO - cópia/W2/: findTheA2.hs  terminallo2.hs
NormalHaskell/: cr.hs  decimal.hs  function.hs  functions.txt  hask.hs
NormalHaskell/Teste/: Quiz2.hs
PF/: 17:18.hs  ficha3.hs  ficha5.hs  ficha6.hs  ficha7.hs  ficha8.hs  ficha9.hs
PF/ficha1/: extest.hs  fica11.hs  ficha1.hs
PF/teste16/: 17.hs
Ratings/: R.hs  Ratings.hs  Ratings.txt  meel4d.hs  namelus_ak.hs  rating.hs  rts.hs
Ratings/TP1/: CompteSmail.hs  Personne.hs  README.md  SmartMail.hs  Trame.hs
SpecificTasks/CUBE/: cube.hi  cube.hs  main
SpecificTasks/ConnectedComp/: 2d.hs  conn.txt  conn2.hs  connected.hs  luci.hs  newVersion.hs
SpecificTasks/Orbit/: orbit.hs
SpecificTasks/Orbit/A3/: A3.cabal  CHANGELOG.md
SpecificTasks/Orbit/A3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
SpecificTasks/Orbit/A3/src/: MyLib.hs  TestSuite.hs
SpecificTasks/Orbit/File/: File.cabal
SpecificTasks/Orbit/File/src/: MyLib.hs  TestSuite.hs
SpecificTasks/Stack/: 1.txt  calc  calc.hi  calc.hs  input.txt  output_double.txt  output_float.txt  output_int.txt
SpecificTasks/pizzaria/: Pizza.ctxt  Pizza.java  package.bluej
SpecificTasks/pizzaria/cenas/src/: Pizza.java
TextCodify/: soundex.hs
Trace/: adrian.hs  first.hs  haskell.hs  second.hs
Trees/: Assessed2-Template.hs  roseTree.hs
Trees/HW3/: HW3 - cópia.hs  HW3.hs
