cabal-version:      2.4
name:               File
version:            0.1.0.0


library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable File
    main-is:          Main.hs

    build-depends:
        base ^>=4.14.3.0,
        File

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite File-testsuite
    type:                     exitcode-stdio-1.0
    main-is:                  TestSuite.hs
    other-modules:            MyLib
    build-depends:            base,HUnit
    hs-source-dirs:   src
    default-language: Haskell2010
